--- a/new.html
+++ b/new.html
@@ -775,48 +775,42 @@
                               </thead>
                               <tbody id="hx-result">
                                 <!-- <tr>
-                                                                        <td scope="row" class="text-start">shipID0</td>
-                                                                        <td>
-                                                                            <svg class="bi" width="24" height="24">
-                                                                                 <use xlink:href="#check" />
-                                                                            </svg>
-                                                                            btime
-                                                                        </td>
-                                                                        <td>
-                                                                            <svg class="bi" width="24" height="24">
-                                                                                <use xlink:href="#check" />
-                                                                            </svg>
-                                                                            etime
-                                                                        </td>
-                                                                        <td>
-                                                                            <svg class="bi" width="24" height="24">
-                                                                                <use xlink:href="#check" />
-                                                                            </svg>
-                                                                            qty
-                                                                        </td>
-                                                                        <td>
-                                                                            <svg class="bi" width="24" height="24">
-                                                                                <use xlink:href="#check" />
-                                                                            </svg>
-                                                                            <a class="article-button"
-                                                                                href="./Payment Page.html">
-                                                                                <i class="fa-solid fa-ticket fa-3x"
-                                                                                    aria-hidden="true"></i>
-                                                                                <span class="sr-only">訂票</span>
-                                                                            </a>
-                                                                        </td>
-                                                                    </tr> -->
-
-
+                                      <td scope="row" class="text-start">shipID0</td>
+                                      <td>
+                                          <svg class="bi" width="24" height="24">
+                                                <use xlink:href="#check" />
+                                          </svg>
+                                          btime
+                                      </td>
+                                      <td>
+                                          <svg class="bi" width="24" height="24">
+                                              <use xlink:href="#check" />
+                                          </svg>
+                                          etime
+                                      </td>
+                                      <td>
+                                          <svg class="bi" width="24" height="24">
+                                              <use xlink:href="#check" />
+                                          </svg>
+                                          qty
+                                      </td>
+                                      <td>
+                                          <svg class="bi" width="24" height="24">
+                                              <use xlink:href="#check" />
+                                          </svg>
+                                          <a class="article-button"
+                                              href="./Payment Page.html">
+                                              <i class="fa-solid fa-ticket fa-3x"
+                                                  aria-hidden="true"></i>
+                                              <span class="sr-only">訂票</span>
+                                          </a>
+                                      </td>
+                                  </tr> -->
                               </tbody>
-
-
                             </table>
                           </div>
                         </main>
                       </article>
-
-
                     </div>
                   </div>
               </div>
@@ -825,23 +819,108 @@
             </article>
           </div>
       </div> <!-- containter END-->
-
-
-
       </div>
       </div>
       <!-- md-6 END-->
-
-
-
-
-
-
     </header>
   </header>
 
+    <!-- Modal-訂票紀錄查詢>_詳細資訊 -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <!-- <h5 class="modal-title" id="exampleModalLabel">主要訂票人資料顯示</h5> -->
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
 
-  <!-- Modal -->
+        <table class="">
+          <div id="planpickered" class="pt-5 pb-5 col-md-12 col-lg-12  text-center"
+            style="background: rgb(102, 235, 226)">
+            <label for="plan">
+              <h1 class="section-title mb-5">主要訂票人資料顯示</h1>
+
+              <p class="article-p" id="Modal-orderNum">訂單編號：</p>
+              <p class="article-p" id="Modal-pno">航班代碼：</p>
+              <p class="article-p" id="Modal-tdate">出發日期：</p>
+              <p class="article-p" id="Modal-btime">出發時間：</p>
+              <p class="article-p" id="Modal-orderName">主要訂票人姓名：</p>
+              <p class="article-p" id="Modal-ticCount">票數：</p>
+
+              <!-- <p class="article-p" id="searchingdate-result">出發日期：</p> -->
+          </div>
+
+        </table>
+        <div class="modal-body row" id="modal-col">
+
+          <!--
+            <div class="col-md-5 col-lg-6 order-md-last">
+              <h4 class="d-flex justify-content-between align-items-center mb-3">
+                <span class="text-primary">其他買票人資料</span>
+                <span class="badge bg-primary rounded-pill">3</span>
+              </h4>
+              <ul class="list-group mb-3">
+                <li class="list-group-item d-flex justify-content-between lh-sm">
+                  <div>
+                    <h6 class="my-0">票號:</h6>
+                  </div>
+                  <div>
+                    <h6 class="my-0" id="ticnum">(票數顯示)</h6>
+                  </div>
+                </li>
+                <li class="list-group-item d-flex justify-content-between lh-sm">
+                  <div>
+                    <h6 class="my-0">姓名:</h6>
+                  </div>
+                  <div>
+                    <h6 class="my-0">id="tname"</h6>
+                  </div>
+                </li>
+                <li class="list-group-item d-flex justify-content-between lh-sm">
+                  <div>
+                    <h6 class="my-0">: 身分證/護照號碼</h6>
+                  </div>
+                  <div>
+                    <h6 class="my-0">id</h6>
+                  </div>
+            
+                </li>
+            
+                <li class="list-group-item d-flex justify-content-between lh-sm">
+                  <div>
+                    <h6 class="my-0">:email</h6>
+                  </div>
+                  <div>
+                    <h6 class="my-0">(email顯示)</h6>
+                  </div>
+                </li>
+                <li class="list-group-item d-flex justify-content-between lh-sm">
+                  <div>
+                    <h6 class="my-0">mobile:</h6>
+                  </div>
+                  <div>
+                    <h6 class="my-0">(mobile顯示)</h6>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            -->
+
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Modal-退票1 -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -934,6 +1013,8 @@
       </div>
     </div>
   </div>
+
+  
 
 
 
