--- a/order.html
+++ b/order.html
@@ -190,9 +190,30 @@
                                                       </li>
                                                       <li class="list-group-item d-flex justify-content-between lh-sm">
                                                         <div class="col-sm-6 mt-3">
+                                                          <div class="intro-box">
+
                                                           <span class="my-0"id="time-show">
-                                                            <i class="fa-solid fa-calendar-days fa-2x"></i>國籍</label>
+                                                            <i class="fa-solid fa-ticket fa-3x"></i>票種</label>
+                                                          
+                                                            <div id="Quantity">
+                                                                <div>
+                                                                    <label for="ticketS">
+                                                                        <select id="ticketQuantity">
+                                                                            <option value="全票">全票</option>
+                                                                            <option value="敬老">敬老 </option>
+                                                                            <option value="兒童">兒童</option>
+                                                                            <option value="博愛">博愛</option>
+                                                                        </select>
+                                                                        張
+                                                                    </label>
+                                                                </div>
+                                                            </div>
                                                           </span>
+                                                        </div>
+
+
+
+
                                                           <div class="invalid-feedback">
                                                             Please select a valid country.
                                                           </div>
