獲取已勾選的checkbox 顯示於 退票確認modal

--- a/order.html
+++ b/order.html
@@ -9,7 +9,7 @@
     <!-- 光瑞給的<meta name="_csrf" th:content="${_csrf.token}">
     <meta name="_csrf_header" th:content="${_csrf.headerName}"> -->
 
-    <title>金廈海運-首頁</title>
+    <title>金廈海運-訂票</title>
     <link rel="icon shortcut" href="./img/favicon.ico">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
