票種設定+傳後台格式

--- a/new.html
+++ b/new.html
@@ -93,7 +93,7 @@
       <div class="container">
 
         <section id="featuresSection" class="py-5 bg-secondary" style="border-radius: 15px;">
-          <div class="container">
+          <div >
 
             <!-- <h1 class=" mb-5 text-center text-white">訂票資訊</h1> -->
             <!-- 設定row內的區塊置中對齊 -->
