與後端連線前準備

--- a/order.html
+++ b/order.html
@@ -627,49 +627,49 @@
                                               </div>
                                             </table>
                                           <div class="row mt-5">
-                                          <div class="col-lg-6">
-                                            <div class="row" style="padding-left: 10%;">
-                                              <input type="text" class="form-control col" id="orderName" placeholder="姓名" value=""
-                                                  required>
-                                              <h4  id="contact"  class="col section-title  text-center text-primary">主要訂購人資料</h4>
-                                            </div>
-                                            <input type="text" class="form-control" id="orderPhone" placeholder="電話"
-                                            value="" required>
-                                            <input type="text" class="form-control" id="orderId" placeholder="身分證" value=""
-                                            required>
-                                          </div>
-
-                                           <!-- 訂單開立方式 -->
-                                           <div class="col-lg-6 col-md-12  col-sm-12 text-primary mt-3   mb-5">
-                                            <div class="list-group-item d-flex justify-content-between lh-sm"colspan="2">
-                                              <div class="table-responsive">
-                                                <table class="table text-center">
-                                                  <thead>
-                                                    <tr>
-                                                      <h4>訂單開立方式</h4>
-                                                    </tr>
-                                                  </thead>
-                                                  <tbody>
-                                                    <tr>
-                                                      <th style="width: 50%;">
-                                                       <div class="col"> 
-                                                          <input type="radio" name="orderMethods" value="統一開立購票證名"
-                                                            required>統一開立購票證名
-                                                        </div>
-                                                      </th>
-                                                      <th style="width: 50%;">
-                                                        <div class="col">
-                                                          <input type="radio" name="orderMethods" value="分別開立購票證名"
-                                                            required>分別開立購票證名
-                                                        </div>
-                                                      </th>
-                                                    </tr>
-                                                  </tbody>
-                                                </table>
-
+                                            <div class="col-lg-6">
+                                              <div class="row" style="padding-left: 10%;">
+                                                <input type="text" class="form-control col" id="orderName" placeholder="姓名" value=""
+                                                    required>
+                                                <h4  id="contact"  class="col section-title  text-center text-primary" style="font-size: 150%;">主要訂購人資料</h4>
                                               </div>
+                                              <input type="text" class="form-control" id="orderPhone" placeholder="電話"
+                                              value="" required>
+                                              <input type="text" class="form-control" id="orderId" placeholder="身分證" value=""
+                                              required>
                                             </div>
-                                          </div>  
+
+                                            <!-- 訂單開立方式 -->
+                                            <div class="col-lg-6 col-md-12  col-sm-12 text-primary mt-3   mb-5">
+                                              <div class="list-group-item d-flex justify-content-between lh-sm"colspan="2">
+                                                <div class="table-responsive">
+                                                  <table class="table text-center">
+                                                    <thead>
+                                                      <tr>
+                                                        <h4>訂單開立方式</h4>
+                                                      </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                      <tr>
+                                                        <th style="width: 50%;">
+                                                        <div class="col"> 
+                                                            <input type="radio" name="orderMethods" value="統一開立購票證名"
+                                                              required>統一開立購票證名
+                                                          </div>
+                                                        </th>
+                                                        <th style="width: 50%;">
+                                                          <div class="col">
+                                                            <input type="radio" name="orderMethods" value="分別開立購票證名"
+                                                              required>分別開立購票證名
+                                                          </div>
+                                                        </th>
+                                                      </tr>
+                                                    </tbody>
+                                                  </table>
+
+                                                </div>
+                                              </div>
+                                            </div>  
 
                                           <!-- <div class="col-lg-6 col-md-12  col-sm-12 text-primary ">
                                             <div class="table-responsive justify-content-center">
