--- a/ticketsPage.html
+++ b/ticketsPage.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
   <!-- TODO: 客製化Bootstrap CSS -->
-  <link rel="stylesheet" href="./css/bootstrap.css">
+  <link rel="stylesheet" href="/css/bootstrap.css">
 
   <!-- Bootstrap CSS -->
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -652,13 +652,13 @@
                               <div class="max-width">
                                 <div class="input-container">
                                   <p>電話:</p>
-                                  <input type="text" id="hx-phone" size="15">
+                                  <input type="text" id="hx-phone" size="10">
                                 </div>
                                 <!-- 其他表单字段 -->
 
                                 <div class="input-container">
                                   <p>身分證:</p>
-                                  <input type="text" id="hx-id" size="15">
+                                  <input type="text" id="hx-id" size="10">
                                 </div>
                               </div>
                             </div>
